- Rev 224 - [2007/04/11] RaX - Overview: Updated the dpr to show the new locations of the files. -

--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 -------------------------------------------------------------------------------------------
 
+- Rev 224 - 
+[2007/04/11] RaX - Overview: Updated the dpr to show the new locations of the files.
+-
+
 - Rev 223 - BROKEN BUILD(On Purpose.)
 [2007/04/11] RaX - Overview: Yet another purposely broken build, this one completes moving
  all the source files into their appropriated positions.
