--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,11 @@ Developers & Contributers
 
 -------------------------------------------------------------------------------------------
 
+- Rev 233 - 
+[2007/04/17] RaX - Added ScriptDirectory to ZoneConfig in Zone.ini.
+[2007/04/17] RaX - Updated EnsureFolderStructure to include the new script directory.
+-
+
 - Rev 232 - 
 [2007/04/17] Tsusai - Notes/Overview: I started having some weird File.dcu not found, when
  doing random things.  So I decided to clean up the uses again.  This solved my issues.
